--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,9 @@
     <string name="add">Add</string>
     <string name="participants">Participants:</string>
     <string name="preference_file_key" />
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
     <!--<string name="admin_receiver_status">Device Administrator Status: %s</string>-->
     <!--<string name="admin_receiver_status_enabled">Enabled</string>-->
     <!--<string name="admin_receiver_status_disable_warning">The application will no longer be protected</string>-->
