--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="enter_event_title">Enter event title...</string>
     <string name="add">Add</string>
     <string name="participants">Participants:</string>
-    <string name="preference_file_key" />
+    <string name="preference_file_key">preference_file</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
