allow for easy selection of calendars and change ui to delete a location in companion view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,10 @@
     <string name="add_a_location">Add a Location:</string>
     <string name="tooltip_add_location">Press the plus button to add a location!</string>
     <string name="locations">Locations</string>
+
+    <string name="channel_id">notification</string>
+    <string name="notification_title">BetterVent</string>
+    <string name="remove">Remove location</string>
     <!--<string name="admin_receiver_status">Device Administrator Status: %s</string>-->
     <!--<string name="admin_receiver_status_enabled">Enabled</string>-->
     <!--<string name="admin_receiver_status_disable_warning">The application will no longer be protected</string>-->
